--- a/FreelanceFlex/.gitignore
+++ b/FreelanceFlex/.gitignore
@@ -29,5 +29,12 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### code testing ###
+
 ### VS Code ###
 .vscode/
+
+
+.metadata/
+Servers/
+
