--- a/FreelanceFlex/src/main/resources/application.properties
+++ b/FreelanceFlex/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.servlet.session.persistent=false
 #DB properties
 spring.datasource.url=jdbc:mysql://localhost:3306/FreelanceFlex?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=manager
+spring.datasource.password=prerana@1451
 # JPA properties
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
