Front end SignIn and SignUp completed

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,40 @@
-/.metadata/
+HELP.md
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
 
-**/Servers
-**/application.properties
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
 
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### code testing ###
+### Testing Part2 ###
+### VS Code ###
+.vscode/
+
+
+.metadata/
+Servers/
+frontend/freelanceflex/node_modules/
